--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -15,13 +15,28 @@
             <header>
                 <a href="#"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
-                        <a href="#"><h4 id="continentenavbar">CONTINENTE</h4></a>
-                        <a href="#"><h4>PAISES</h4></a>
+                        <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
+                        <a href="../Paises/index.html"><h4>PAISES</h4></a>
                         <a href="#"><h4>BIOMAS</h4></a>
                     </nav>
             </header>
         </div>
 
+        <h1 id="biomas">BIOMAS</h1>
+        <div id="conteudo">
+            <div class="rowgaleria">
+                <div class="galeria">
+                    <img src="../images/cordilheira-dos-andes 1.png" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
         
         <footer>
             <a href="#" class="textofooter">
