--- a/Continente/index.html
+++ b/Continente/index.html
@@ -13,15 +13,29 @@
     <main>
         <div class="headerdiv">
             <header>
-                <a href="#"><img src="../LogoImagem.png" alt="" class="logo"></a>
+                <a href="#"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
-                        <a href="#"><h4>CONTINENTE</h4></a>
-                        <a href="#"><h4>PAISES</h4></a>
-                        <a href="#"><h4>BIOMAS</h4></a>
+                        <a href="#"><h4 id="continentenavbar">CONTINENTE</h4></a>
+                        <a href="../Paises/index.html"><h4>PAISES</h4></a>
+                        <a href="../Biomas/index.html"><h4>BIOMAS</h4></a>
                     </nav>
             </header>
         </div>
 
+        <h1>AMERICA DO SUL</h1>
+        <hr class="hr">
+
+        <div class="conteudo">
+            <img src="../images/Group 27 (1).png" alt="" id="imagemconteudo">
+            <div id="rowtextoconteudo">
+                <p class="textoconteudo">A América do Sul é um continente rico em diversidade cultural, natural e histórica. Situado principalmente no hemisfério sul, é composto por 12 países independentes, incluindo Brasil, Argentina, Colômbia e Chile. A região abriga a maior floresta tropical do mundo, a Amazônia, que desempenha um papel crucial na regulação do clima global e na biodiversidade. Além das florestas tropicais, a América do Sul possui uma variedade impressionante de paisagens, desde os picos nevados dos Andes até os desertos áridos do Atacama.</p>
+                <p class="textoconteudo">Culturalmente, o continente é um mosaico vibrante de influências indígenas, africanas e europeias, refletidas na música, dança, culinária e festividades locais. Cidades como Rio de Janeiro, Buenos Aires e Bogotá são centros de riqueza cultural e econômica, oferecendo uma mistura de modernidade e tradição. A economia da América do Sul é diversificada, com setores importantes como agricultura, mineração e energia.</p>
+                <p class="textoconteudo">O continente também enfrenta desafios significativos, incluindo desigualdade social, desmatamento e questões políticas complexas. Contudo, a resiliência e a criatividade de seu povo continuam a impulsionar avanços em várias áreas. A América do Sul é, sem dúvida, uma terra de contrastes, repleta de oportunidades e belezas naturais únicas.</p>  
+            </div>
+
+        </div>
+        <p id="textoimagem">mapa da américa do sul</p>
+        
         <footer>
             <a href="#" class="textofooter">
                 <h4>HOME</h4>
@@ -34,8 +48,9 @@
             <a href="#" class="textofooter">
                 <h4>JOGOS</h4>
             </a>
-            <p class="contatofooter">contato: BiosulEdutec@gmail.com</p>
+            
         </footer>
+        <div id="contatofooter"><p>BiosulEdutec@gmail.com</p></div>
     </main>
 </body>
 </html>
