Melhoria geral em todo o site e criação de novas Paginas

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -18,7 +18,7 @@
                     <nav class="navbar">
                         <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
                         <a href="../Paises/index.html"><h4>PAISES</h4></a>
-                        <a href="#"><h4>BIOMAS</h4></a>
+                        <a href="../Biomas/index.html"><h4 id="biomasnavbar">BIOMAS</h4></a>
                     </nav>
             </header>
         </div>
@@ -42,15 +42,15 @@
         </div>
         
         <footer>
-            <a href="#" class="textofooter">
+            <a href="../Homepage/index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
-            <a href="#" class="textofooter">
+            <a href="../Feedback/index.html" class="textofooter">
                 <h4>FEEDBACK</h4>
             </a>
             <hr class="textofooter">
-            <a href="#" class="textofooter">
+            <a href="../Jogos/index.html" class="textofooter">
                 <h4>JOGOS</h4>
             </a>
             
