--- a/Jogos/index.html
+++ b/Jogos/index.html
@@ -22,6 +22,15 @@
             </header>
         </div>
 
+        <div id="cardquiz">
+            <h2 id="tituloquiz">QUIZ</h2>
+
+            <h5 id="subtituloquiz">QUIZ DE 5 QUESTÕES!</h5>
+
+            <p id="textoquiz">Um quiz é um tipo de jogo ou atividade educacional que consiste em perguntas, muitas vezes com opções de resposta, desafiando os participantes a testarem seu conhecimento em determinado assunto. Geralmente, é utilizado para entretenimento, aprendizado ou avaliação de conhecimentos em diversos temas, desde trivia até assuntos específicos.</p>
+
+            <a href="" id="botaoenviar"><input type="submit" value="IR AO QUIZ" id="enviarbotao"></a>
+        </div>
         
         <footer>
             <a href="../Homepage/index.html" class="textofooter">
