--- a/Continente/index.html
+++ b/Continente/index.html
@@ -15,7 +15,7 @@
             <header>
                 <a href="#"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
-                        <a href="#"><h4 id="continentenavbar">CONTINENTE</h4></a>
+                        <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
                         <a href="../Paises/index.html"><h4>PAISES</h4></a>
                         <a href="../Biomas/index.html"><h4>BIOMAS</h4></a>
                     </nav>
@@ -37,15 +37,15 @@
         <p id="textoimagem">mapa da américa do sul</p>
         
         <footer>
-            <a href="#" class="textofooter">
+            <a href="../Homepage/index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
-            <a href="#" class="textofooter">
+            <a href="../Feedback/index.html" class="textofooter">
                 <h4>FEEDBACK</h4>
             </a>
             <hr class="textofooter">
-            <a href="#" class="textofooter">
+            <a href="../Jogos/index.html" class="textofooter">
                 <h4>JOGOS</h4>
             </a>
             
