HomePage quase completa

--- a/Paises/index.html
+++ b/Paises/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="headerdiv">
             <header>
-                <a href="#"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
+                <a href="../Homepage/index.html"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
                         <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
                         <a href="../Paises/index.html"><h4 id="paisesnavbar">PAISES</h4></a>
@@ -22,6 +22,10 @@
             </header>
         </div>
 
+        <h1>PAISES DA AMERICA DO SUL</h1>
+        <div>
+
+        </div>
         
         <footer>
             <a href="../Homepage/index.html" class="textofooter">
