--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="headerdiv">
             <header>
-                <a href="#"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
+                <a href="../Homepage/index.html"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
                         <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
                         <a href="../Paises/index.html"><h4>PAISES</h4></a>
