Semi finalização da homepage

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -62,7 +62,7 @@
             <div id="linhabotoesgame">
                 <img src="../images/buttonControle.png" alt="" id="buttoncontrole">
                 
-                <button id="buttonquiz">IR AO QUIZ</button>
+                <a href="../Jogos/index.html"><button id="buttonquiz">IR AO QUIZ</button></a>
             </div>
         </div>
 
@@ -86,25 +86,27 @@
             </div>
         </div>
 
+
         <div id="conteudosvideos">
             <h2>SERIES E VIDEOS SOBRE <br>O CONTEUDO</h2>
             <hr>
 
             <div id="rowvideos">
-                <div class="conteudovideos">
-                    <img src="" alt="">
-                    <p>Amazônia 3D</p>
+                <div class="cardvideos">
+                    <img src="../images/video1.png" alt="">
+                    <p class="textolink">Amazônia 3D</p>
                 </div>
-                <div class="conteudovideos">
-                    <img src="" alt="">
-                    <p>Pantanal: a maior área<br> úmida continental<br> do planeta</p>
+                <div class="cardvideos">
+                    <img src="../images/video2.png" alt="">
+                    <p class="textolink">Pantanal: a maior área<br> úmida continental<br> do planeta</p>
                 </div>
-                <div class="conteudovideos">
-                    <img src="" alt="">
-                    <p>Amazônia Eterna</p>
+                <div class="cardvideos">
+                    <img src="../images/video3.png" alt="">
+                    <p class="textolink">Amazônia Eterna</p>
                 </div>
             </div>
         </div>
+
 
         <footer>
             <a href="../Homepage/index.html" class="textofooter">
