HTML e CSS da page Paises provavelmente finalizados

--- a/Paises/index.html
+++ b/Paises/index.html
@@ -23,7 +23,38 @@
         </div>
 
         <h1>PAISES DA AMERICA DO SUL</h1>
-        <div>
+        <div id="conteudo">
+
+            <h3>CHILE</h3>
+
+            <div class="rowesquerda">
+                <img src="../images/PaisesBandeiras/ChileBandeira 1.png" alt="">
+                <p>O Chile é um país estreito e longo que se estende ao longo da borda oeste da América do Sul, entre os Andes e o Oceano Pacífico. Santiago, a capital, é um centro econômico e cultural com uma vibrante cena artística e culinária. O país é conhecido por seus diversos climas e paisagens, desde o deserto do Atacama no norte até as geleiras da Patagônia no sul. A economia chilena é uma das mais estáveis e prósperas da região, com fortes setores de mineração, especialmente cobre, agricultura e serviços. A cultura chilena é uma mistura de influências indígenas e espanholas, com tradições folclóricas ricas. O vinho chileno é reconhecido internacionalmente pela sua qualidade.</p>
+            </div>
+
+            <img src="../images/linhapaises.png" alt="">
+            <h3>BRASIL</h3>
+
+            <div class="rowdireita">
+                <p>O Brasil, o maior país da América do Sul, é conhecido por suas vastas florestas tropicais, incluindo a Amazônia, a maior floresta tropical do mundo. Brasília, a capital, é famosa por sua arquitetura moderna planejada por Oscar Niemeyer. O país é um gigante econômico na região, com uma economia diversificada que inclui agricultura, mineração, manufatura e serviços. A cultura brasileira é vibrante e diversificada, influenciada por indígenas, africanos e europeus, e é conhecida mundialmente pelo Carnaval do Rio de Janeiro. O futebol é uma paixão nacional, com o Brasil sendo o país que mais vezes ganhou a Copa do Mundo. A música brasileira, incluindo samba, bossa nova e forró, é celebrada globalmente.</p>
+                <img src="../images/PaisesBandeiras/2-bandeira-do-brasil 1.png" alt="">
+            </div>
+            
+            <img src="../images/linhapaises.png" alt="">
+            <h3>PERU</h3>
+
+            <div class="rowesquerda">
+                <img src="" alt="">
+                <p></p>
+            </div>
+
+            <img src="../images/linhapaises.png" alt="">
+            <h3>PARAGUAI</h3>
+
+            <div class="rowdireita">
+                <p></p>
+                <img src="" alt="">
+            </div>
 
         </div>
         
