--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -24,22 +24,43 @@
         </div>
 
         <h1 id="biomas">BIOMAS</h1>
-        <div class="container">
-            <button class="arrow-left control" aria-label="Previous image">a</button>
-            <button class="arrow-right control" aria-label="Previous image">b</button>
-            <div class="gallery-wrapper">
-                <div class="gallery">
-                    <img src="../images/Biomas/amazonia.webp" alt="" class="item current-item">
-                    <img src="../images/Biomas/cerrado.jpg" alt="" class="item current-item">
-                    <img src="../images/Biomas/chaco.jpg" alt="" class="item current-item">
-                    <img src="../images/Biomas/cordilheiradosandes.webp" alt="" class="item current-item">
-                    <img src="../images/Biomas/deserto do atacama.jpg" alt="" class="item current-item">
-                    <img src="../images/Biomas/mata atlantica.jpg" alt="" class="item current-item">
-                    <img src="../images/Biomas/pampa.webp" alt="" class="item current-item">
-                    <img src="../images/Biomas/pantanal.webp" alt="" class="item current-item">
-                </div>
-            </div>
-        </div>
+
+
+        <!-- Slideshow container -->
+<div class="slideshow-container fade">
+
+    <!-- Full images / Content -->
+    <div class="Containers">
+      <div class="info">Slide 1</div>
+      <img src="../images/Biomas/amazonia.webp" style="width:100%">
+      <div class="Info">First caption</div>
+    </div>
+  
+    <div class="Containers">
+      <div class="info">Slide 2</div>
+      <img src="../images/Biomas/mata atlantica.jpg" style="width:100%">
+      <div class="Info">Second Caption</div>
+    </div>
+  
+    <div class="Containers">
+      <div class="info">Slide 3</div>
+      <img src="../images/Biomas/chaco.jpg" style="width:100%">
+      <div class="Info">Third Caption</div>
+    </div>
+  
+    <!-- Prev and Next buttons -->
+    <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="forward" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots -->
+  <div style="text-align:center">
+    <span class="dots" onclick="currentSlide(1)"></span>
+    <span class="dots" onclick="currentSlide(2)"></span>
+    <span class="dots" onclick="currentSlide(3)"></span>
+  </div> 
+
         
         <footer>
             <a href="../Homepage/index.html" class="textofooter">
