--- a/Continente/index.html
+++ b/Continente/index.html
@@ -13,9 +13,9 @@
     <main>
         <div class="headerdiv">
             <header>
-                <a href="../Homepage/index.html"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
+                <a href="../index.html"><img src="../images/LogoImagem.png" alt="" class="logo"></a>
                     <nav class="navbar">
-                        <a href="../Continente/index.html"><h4 id="continentenavbar">CONTINENTE</h4></a>
+                        <a href="../Continente/index.html"><h4>CONTINENTE</h4></a>
                         <a href="../Paises/index.html"><h4>PAISES</h4></a>
                         <a href="../Biomas/index.html"><h4>BIOMAS</h4></a>
                     </nav>
