muitas coisas feitas

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<script src="javascript.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="javascript.js" defer></script>
 </head>
 <body>
     <main>
@@ -23,45 +23,34 @@
             </header>
         </div>
 
-        <h1 id="biomas">BIOMAS</h1>
 
-
-        <!-- Slideshow container -->
-<div class="slideshow-container fade">
-
-    <!-- Full images / Content -->
-    <div class="Containers">
-      <div class="info">Slide 1</div>
-      <img src="../images/Biomas/amazonia.webp" style="width:100%">
-      <div class="Info">First caption</div>
-    </div>
-  
-    <div class="Containers">
-      <div class="info">Slide 2</div>
-      <img src="../images/Biomas/mata atlantica.jpg" style="width:100%">
-      <div class="Info">Second Caption</div>
-    </div>
-  
-    <div class="Containers">
-      <div class="info">Slide 3</div>
-      <img src="../images/Biomas/chaco.jpg" style="width:100%">
-      <div class="Info">Third Caption</div>
-    </div>
-  
-    <!-- Prev and Next buttons -->
-    <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="forward" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots -->
-  <div style="text-align:center">
-    <span class="dots" onclick="currentSlide(1)"></span>
-    <span class="dots" onclick="currentSlide(2)"></span>
-    <span class="dots" onclick="currentSlide(3)"></span>
-  </div> 
-
+        <h1 id="biomas">BIOMAS DA AMERICA DO SUL</h1>
+        <div id="hrh1">
+            <hr id="hrcomeco">
+        </div>
         
+
+        <div id="container">
+            <div id="slider-container">
+                <span onclick="slideRight()" class="btn"></span>
+                <div id="slider">
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                    <div class="slide"><span>150x150</span></div>
+                </div>
+                <span onclick="slideLeft()" class="btn"></span>
+            </div>
+        </div>
+        
+
+
         <footer>
             <a href="../Homepage/index.html" class="textofooter">
                 <h4>HOME</h4>
