--- a/Jogos/index.html
+++ b/Jogos/index.html
@@ -29,7 +29,7 @@
 
             <p id="textoquiz">Um quiz é um tipo de jogo ou atividade educacional que consiste em perguntas, muitas vezes com opções de resposta, desafiando os participantes a testarem seu conhecimento em determinado assunto. Geralmente, é utilizado para entretenimento, aprendizado ou avaliação de conhecimentos em diversos temas, desde trivia até assuntos específicos.</p>
 
-            <a href="" id="botaoenviar"><input type="submit" value="IR AO QUIZ" id="enviarbotao"></a>
+            <a href="../Quiz/index.html" id="botaoenviar"><input type="submit" value="IR AO QUIZ" id="enviarbotao"></a>
         </div>
         
         <footer>
