--- a/Paises/index.html
+++ b/Paises/index.html
@@ -24,6 +24,10 @@
         </div>
 
         <h1>PAISES DA AMERICA DO SUL</h1>
+        <div id="hrh1">
+            <hr>
+        </div>
+        
         <div id="conteudo">
 
 
