arrumando navegação pt2

--- a/Continente/index.html
+++ b/Continente/index.html
@@ -37,7 +37,7 @@
         <p id="textoimagem">mapa da américa do sul</p>
         
         <footer>
-            <a href="../Homepage/index.html" class="textofooter">
+            <a href="../index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
