--- a/Jogos/index.html
+++ b/Jogos/index.html
@@ -33,7 +33,7 @@
         </div>
         
         <footer>
-            <a href="../Homepage/index.html" class="textofooter">
+            <a href="../index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
