--- a/ref/index.html
+++ b/ref/index.html
@@ -24,7 +24,7 @@
 
         
         <footer>
-            <a href="../Homepage/index.html" class="textofooter">
+            <a href="../index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
