arrumando falha em Paises

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -52,7 +52,7 @@
 
 
         <footer>
-            <a href="../Homepage/index.html" class="textofooter">
+            <a href="../index.html" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
