--- a/Paises/index.html
+++ b/Paises/index.html
@@ -25,7 +25,7 @@
 
         <h1>PAISES DA AMERICA DO SUL</h1>
         <div id="hrh1">
-            <hr>
+            <hr class="hr">
         </div>
         
         <div id="conteudo">
