adição dos biomas e começo de um teste no carrossel

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -23,31 +23,28 @@
             </header>
         </div>
 
-
         <h1 id="biomas">BIOMAS DA AMERICA DO SUL</h1>
         <div id="hrh1">
             <hr id="hrcomeco">
         </div>
         
 
-        <div id="container">
-            <div id="slider-container">
-                <span onclick="slideRight()" class="btn"></span>
-                <div id="slider">
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                    <div class="slide"><span>150x150</span></div>
-                </div>
-                <span onclick="slideLeft()" class="btn"></span>
+        <div class="container">
+            <button class="arrow-left control" aria-label="Previous image">◀</button>
+            <button class="arrow-right control" aria-label="Next Image">▶</button>
+            <div class="gallery-wrapper">
+              <div class="gallery">
+                <a href="../amazonia/index.html"><img src="../images/Biomas/amazonia.webp" alt="" class="item current-item"></a>
+                <a href="../cerrado/index.html"><img src="../images/Biomas/cerrado.jpg" alt="" class="item current-item"></a>
+                <a href="../chaco/index.html"><img src="../images/Biomas/chaco.jpg" alt="" class="item current-item"></a>
+                <a href="../cordilheiraandes/index.html"><img src="../images/Biomas/cordilheiradosandes.webp" alt="" class="item current-item"></a>
+                <a href="../desertoatacama/index.html"><img src="../images/Biomas/deserto do atacama.jpg" alt="" class="item current-item"></a>
+                <a href="../mataatlantica/index.html"><img src="../images/Biomas/mata atlantica.jpg" alt="" class="item current-item"></a>
+                <a href="../pampa/index.html"><img src="../images/Biomas/pampa.webp" alt="" class="item current-item"></a>
+                <a href="../pantanal/index.html"><img src="../images/Biomas/pantanal.webp" alt="" class="item current-item"></a> 
+              </div>
             </div>
-        </div>
+          </div>
         
 
 
