Concerto de pequenos erros

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
         <footer>
-            <a href="./Homepage/index.html" class="textofooter">
+            <a href="#" class="textofooter">
                 <h4>HOME</h4>
             </a>
             <hr class="textofooter">
