arrumando os botoes da tela Biomas

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -27,7 +27,7 @@
 
         <div id="conteudo">
             
-            <button onclick="Esq()">esq</button>
+            <button onclick="Esq()" class="botoes"><img src="../images/esquerdaseta.png" alt=""></button>
 
 
             <div id="galeria">
@@ -73,7 +73,7 @@
             </div>
 
 
-            <button onclick="Dir()">dir</button>
+            <button onclick="Dir()" class="botoes sla"><img src="../images/direitaseta.png" alt=""></button>
         </div>
 
 
