arrumando poucas coisas e ideias no quiz

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             <div id="rowimagens">
                 <div class="rowbaixo">
                     <img src="./images/Floresta tropical.jpg" alt="">
-                    <p class="textolink textoimagemlink">Mata Atlântica</p>
+                    <p class="textolink textoimagemlink"><a href="./mataatlantica/index.html">Mata Atlântica</a></p>
                 </div>
                 <div>
                     <img src="./images/Rectangle 4.png" alt="">
-                    <p class="textolink textoimagemlink">Pântano</p>
+                    <p class="textolink textoimagemlink"><a href="./pantanal/index.html">Pantanal</a></p>
                 </div>
                 <div class="rowbaixo">
                     <img src="./images/Rectangle 7.png" alt="">
-                    <p class="textolink textoimagemlink">Chaparral</p>
+                    <p class="textolink textoimagemlink"><a href="./">Chaparral</a></p>
                 </div>
                 <div>
                     <img src="./images/Rectangle 6.png" alt="">
-                    <p class="textolink textoimagemlink">Cerrado</p>
+                    <p class="textolink textoimagemlink"><a href="">Cerrado</a></p>
                 </div>
             </div>
 
@@ -94,15 +94,15 @@
             <div id="rowvideos">
                 <div class="cardvideos">
                     <img src="./images/video1.png" alt="">
-                    <p class="textolink">Amazônia 3D</p>
+                    <p class="textolink"><a href="https://www.youtube.com/watch?v=8SiwtoK2H8w">Amazônia 3D</a></p>
                 </div>
                 <div class="cardvideos">
                     <img src="./images/video2.png" alt="">
-                    <p class="textolink">Pantanal: a maior área<br> úmida continental<br> do planeta</p>
+                    <p class="textolink"><a href="https://www.youtube.com/watch?v=FQdBcA1rK5Q">Pantanal: a maior área<br> úmida continental<br> do planeta</a></p>
                 </div>
                 <div class="cardvideos">
                     <img src="./images/video3.png" alt="">
-                    <p class="textolink">Amazônia Eterna</p>
+                    <p class="textolink"><a href="https://www.adorocinema.com/filmes/filme-213738/">Amazônia Eterna</a></p>
                 </div>
             </div>
         </div>
