arrumando muitas coisas

--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -29,49 +29,47 @@
                 
                 <button onclick="Esq()" class="botoes"><img src="../images/esquerdaseta.png" alt=""></button>
 
-
                 <div id="galeria">
                     <div class="card">
                         <a href="../amazonia/index.html"><img src="../images/Biomas/amazonia.webp" alt=""></a>
-                        <a href=""><p>AMAZONIA</p></a>
+                        <a href="../amazonia/index.html"><p>AMAZONIA</p></a>
                     </div>
 
                     <div class="card atual">
                         <a href="../cerrado/index.html"><img src="../images/Biomas/cerrado.jpg" alt=""></a>
-                        <a href=""><p>CERRADO</p></a>
+                        <a href="../cerrado/index.html"><p>CERRADO</p></a>
                     </div>
 
                     <div class="card">
                         <a href="../chaco/index.html"><img src="../images/Biomas/chaco.jpg" alt=""></a>
-                        <a href=""><p>CHACO</p></a>
+                        <a href="../chaco/index.html"><p>CHACO</p></a>
                     </div>
 
                     <div class="card fora">
                         <a href="../cordilheiraandes/index.html"><img src="../images/Biomas/cordilheiradosandes.webp" alt=""></a>
-                        <a href=""><p>CORDILHEIRA DOS ANDES</p></a>
+                        <a href="../cordilheiraandes/index.html"><p>CORDILHEIRA DOS ANDES</p></a>
                     </div>
 
                     <div class="card fora">
                         <a href="../desertoatacama/index.html"><img src="../images/Biomas/deserto do atacama.jpg" alt=""></a>
-                        <a href=""><p>DESERTO DO ATACAMA</p></a>
+                        <a href="../desertoatacama/index.html"><p>DESERTO DO ATACAMA</p></a>
                     </div>
 
                     <div class="card fora">
                         <a href="../mataatlantica/index.html"><img src="../images/Biomas/mata atlantica.jpg" alt=""></a>
-                        <a href=""><p>MATA ATLANTICA</p></a>
+                        <a href="../mataatlantica/index.html"><p>MATA ATLANTICA</p></a>
                     </div>
 
                     <div class="card fora">
                         <a href="../pampa/index.html"><img src="../images/Biomas/pampa.webp" alt=""></a>
-                        <a href=""><p>PAMPA</p></a>
+                        <a href="../pampa/index.html"><p>PAMPA</p></a>
                     </div>
 
                     <div class="card fora">
                         <a href="../pantanal/index.html"><img src="../images/Biomas/pantanal.webp" alt=""></a>
-                        <a href=""><p>PANTANAL</p></a>
+                        <a href="../pantanal/index.html"><p>PANTANAL</p></a>
                     </div>    
                 </div>
-
 
                 <button onclick="Dir()" class="botoes sla"><img src="../images/direitaseta.png" alt=""></button>
             </div>
