--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -16,6 +16,11 @@
 
 
     <div class="content">
+        <div id="quiztitulo">
+          <h3>QUIZ</h3>
+        </div>
+        <hr>
+
         <div class="questionbg">
             <span class="question"></span>    
         </div>
