--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <p class="textolink textoimagemlink"><a href="./pantanal/index.html">Pantanal</a></p>
                 </div>
                 <div class="rowbaixo">
-                    <img src="./images/Rectangle 7.png" alt="">
-                    <p class="textolink textoimagemlink"><a href="./">Chaparral</a></p>
+                    <img src="./images/amazoniahomepagge.png" alt="">
+                    <p class="textolink textoimagemlink"><a href="./">Amazônia</a></p>
                 </div>
                 <div>
                     <img src="./images/Rectangle 6.png" alt="">
-                    <p class="textolink textoimagemlink"><a href="">Cerrado</a></p>
+                    <p class="textolink textoimagemlink"><a href="./cerrado/index.html">Cerrado</a></p>
                 </div>
             </div>
 
