--- a/Continente/index.html
+++ b/Continente/index.html
@@ -23,7 +23,9 @@
         </div>
 
         <h1>AMERICA DO SUL</h1>
-        <hr class="hr">
+        <div id="hrh1">
+            <hr class="hr">
+        </div>
 
         <div class="conteudo">
             <img src="../images/Group 27 (1).png" alt="" id="imagemconteudo">
