--- a/Paises/index.html
+++ b/Paises/index.html
@@ -34,7 +34,7 @@
             <h3>CHILE</h3>
             <div class="rowesquerda">
                 <img src="../images/PaisesBandeiras/ChileBandeira 1.png" alt="">
-                <p>O Chile é um país estreito e longo que se estende ao longo da borda oeste da América do Sul, entre os Andes e o Oceano Pacífico. Santiago, a capital, é um centro econômico e cultural com uma vibrante cena artística e culinária. O país é conhecido por seus diversos climas e paisagens, desde o deserto do Atacama no norte até as geleiras da Patagônia no sul. A economia chilena é uma das mais estáveis e prósperas da região, com fortes setores de mineração, especialmente cobre, agricultura e serviços. A cultura chilena é uma mistura de influências indígenas e espanholas, com tradições folclóricas ricas. O vinho chileno é reconhecido internacionalmente pela sua qualidade.</p>
+                <p>O Chile é um país alongado situado na costa ocidental da América do Sul, estendendo-se do deserto de Atacama no norte até as regiões geladas da Patagônia no sul. Sua capital é Santiago, um importante centro econômico e cultural. O Chile é conhecido por suas paisagens diversas, incluindo montanhas, vinícolas e uma costa extensa ao longo do Pacífico. A economia chilena é uma das mais estáveis da América Latina, com destaque para a mineração, especialmente de cobre, e o setor de vinhos. O país também tem uma história política marcada por períodos de ditadura e transições para a democracia. Recentemente, o Chile tem enfrentado desafios sociais e econômicos, incluindo protestos e debates sobre reformas constitucionais e desigualdade.</p>
             </div>
             <img src="../images/linhapaises.png" alt="">
 
@@ -105,7 +105,7 @@
 
             <h3>ARGENTINA</h3>
             <div class="rowdireita">
-                <p>A Argentina, localizada no sul da América do Sul, é famosa por suas paisagens diversas, que incluem as pampas, os Andes e a Patagônia. Buenos Aires, a capital, é um centro cultural vibrante, conhecido por sua arquitetura europeia e a dança do tango. O país é um dos maiores produtores de vinho do mundo, com regiões vinícolas renomadas como Mendoza. A gastronomia argentina é destacada por suas carnes, especialmente o churrasco. A economia é diversificada, com setores importantes como agricultura, manufatura e serviços.</p>
+                <p>A Argentina é um país localizado no sul da América do Sul, conhecido por sua rica herança cultural e histórica. A capital é Buenos Aires, uma cidade vibrante com influências europeias e uma cena artística e literária renomada. O país é famoso por seu tango, sua culinária com destaque para as carnes e vinhos, e por suas paisagens variadas, que vão desde os Andes no oeste até as planícies da Pampas e as geladas regiões da Patagônia no sul. A Argentina também enfrenta desafios econômicos, com períodos de inflação alta e instabilidade financeira. A política argentina tem sido marcada por alternâncias entre diferentes ideologias e governos, refletindo uma sociedade dinâmica e em constante mudança.</p>
                 <img src="../images/PaisesBandeiras/BandeiraArgentina 1.png" alt="">
             </div>
             <img src="../images/linhapaises.png" alt="">
@@ -114,7 +114,7 @@
             <h3>VENEZUELA</h3>
             <div class="rowesquerda">
                 <img src="../images/PaisesBandeiras/Flag_of_Venezuela_(state) 1.png" alt="">
-                <p>A Venezuela, localizada na costa norte da América do Sul, é conhecida por suas vastas reservas de petróleo, que são algumas das maiores do mundo. Caracas, a capital, é uma cidade dinâmica com uma mistura de modernidade e história colonial. A economia venezuelana depende fortemente da indústria petrolífera, embora enfrente desafios econômicos significativos nos últimos</p>
+                <p>A Venezuela é um país localizado no norte da América do Sul, limitado pelo Mar do Caribe ao norte e por Brasil e Colômbia ao sul e oeste. Sua capital é Caracas, e o país é conhecido por suas vastas reservas de petróleo, que desempenham um papel crucial na economia nacional. Nos últimos anos, a Venezuela tem enfrentado uma crise econômica e política grave, caracterizada por hiperinflação, escassez de bens essenciais e instabilidade governamental. A situação gerou uma crise humanitária, levando a um êxodo em massa de venezuelanos em busca de melhores condições de vida. A tensão política é marcada pela disputa entre o governo de Nicolás Maduro e a oposição, que busca reformas e novas eleições.</p>
             </div>
             <img src="../images/linhapaises.png" alt="">
 
@@ -132,6 +132,10 @@
                 <img src="../images/PaisesBandeiras/Flag_of_Guyana 1.png" alt="">
                 <p>A Guiana é um país na costa norte da América do Sul, conhecido por suas florestas tropicais exuberantes e vastas áreas selvagens. Georgetown, a capital, é uma cidade vibrante com arquitetura colonial britânica e mercados movimentados. A economia guianense é impulsionada pela mineração, agricultura e, mais recentemente, pela descoberta de grandes reservas de petróleo offshore. A diversidade cultural do país é marcada pela influência de comunidades indígenas, africanas, indianas e europeias. A Guiana é famosa por sua biodiversidade, incluindo muitas espécies endêmicas de plantas e animais. A culinária local é uma fusão de sabores, refletindo a rica herança cultural do país.</p>
             </div>
+        </div>
+
+        <div id="botaosubir">
+            <a href="#"><img src="../images/botaosubir.png" alt=""></a>   
         </div>
         
         <footer>
