--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
             </div>
         </div>
 
+        <div id="botaosubir">
+            <a href="#"><img src="./images/botaosubir.png" alt=""></a>   
+        </div>
+
 
         <footer>
             <a href="#" class="textofooter">
