--- a/Biomas/index.html
+++ b/Biomas/index.html
@@ -24,6 +24,10 @@
         </div>
 
         <h1>BIOMAS DA AMERICA DO SUL</h1>
+        <div id="hrh1">
+            <hr class="hr">
+        </div>
+        
         <div id="row">
             <div id="conteudo">
                 
