--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BioSul - Login</title>
+    <title>BioSul - Cadastro</title>
     <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script src="./cadastro.js" defer></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +23,26 @@
             </header>
         </div>
 
+        <div id="cardquiz">
+            <h2 id="tituloquiz">CADASTRO</h2>
+            <h3>CRIE SUA CONTA</h3>
 
+            <label for="" class="label">Seu nome:</label>
+            <input type="text" class="input" id="name">
+
+            <label for="" class="label">email:</label>
+            <input type="text" class="input" id="email">
+
+            <label for="" class="label">Sua senha:</label>
+            <input type="text" class="input" id="password">
+
+            <label for="" class="label">Confirme sua senha:</label>
+            <input type="text" class="input" id="password-confirmation">
+
+            <p class="pCadastro">já tem uma conta? <a href="../Login/index.html">entrar</a></p>
+            
+            <a href="" id="botaoenviar"><input type="submit" value="CADASTRE-SE" id="enviarbotao"></a>
+        </div>
 
         <footer>
             <a href="../index.html" class="textofooter">
