--- a/Login/index.html
+++ b/Login/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script src="./login.js" defer></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +23,20 @@
             </header>
         </div>
 
+        <div id="cardquiz">
+            <h2 id="tituloquiz">LOGIN</h2>
+            <h3>ENTRE EM SUA CONTA</h3>
 
+            <label for="" class="label">Seu usuário ou email:</label>
+            <input type="text" class="input" id="email">
+
+            <label for="" class="ultlabel label">Sua senha:</label>
+            <input type="text" class="input" id="password">
+
+            <p class="pCadastro">ainda não tem uma conta? <a href="../Cadastro/index.html">cadastre-se</a></p>
+            
+            <a href="../index.html" id="botaoenviar"><input type="submit" value="ENTRAR" id="enviarbotao"></a>
+        </div>
 
         <footer>
             <a href="../index.html" class="textofooter">
