--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<script src="./Homepage/javascript.js" defer></script>
+<script src="./Homepage/javascript.js" type="module" defer></script>
 </head>
 <body>
     <main>
@@ -19,7 +19,10 @@
                     <a href="./Continente/index.html"><h4>CONTINENTE</h4></a>
                     <a href="./Paises/index.html"><h4>PAISES</h4></a>
                     <a href="./Biomas/index.html"><h4>BIOMAS</h4></a>
+                    <h4 id="usuario">USUARIO: TESTE</h4>
                 </nav>
+
+                
             </header>
         </div>
            
