--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="./Continente/index.html"><h4>CONTINENTE</h4></a>
                     <a href="./Paises/index.html"><h4>PAISES</h4></a>
                     <a href="./Biomas/index.html"><h4>BIOMAS</h4></a>
-                    <h4 id="usuario">USUARIO: TESTE</h4>
+                    <h4 id="usuario"></h4>
                 </nav>
 
                 
